--- a/views/error.pug
+++ b/views/error.pug
@@ -2,14 +2,14 @@ extends layout.pug
 
 block content 
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+    a(href='/') ← Back to homepage
   article.grid-container.portfolio-intro.portfolio-project
     .grid-x
       .cell
         h1= `${error.message}`
         h2= `Status: ${error.status}`
-        p
-          pre.stack-trace= error.stack
+        br
+        pre= error.stack
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back to homepage
   
