Fix website url

--- a/views/about.pug
+++ b/views/about.pug
@@ -31,7 +31,7 @@ block content
           li jess@webdevjd.com
         a.button.expanded(href='https://www.linkedin.com/in/jessicadiponziano' target="_blank") LinkedIn
         a.button.expanded(href='https://github.com/jdiponziano' target="_blank") GitHub
-        a.button.expanded(href='https://github.com/jdiponziano' target="_blank") Website
+        a.button.expanded(href='https://jessicadiponziano.com' target="_blank") Website
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
