--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,7 @@ p {
 
 .button {
   background-color: #313B74;
+  transition: background-color 0.5s ease;
 }
 
 .button:hover {
@@ -40,6 +41,7 @@ p {
 
 a {
   color: #333;
+  transition: color 0.5s ease;
 }
 
 a:hover {
@@ -80,6 +82,7 @@ a:hover {
   letter-spacing: 2.5px;
   -webkit-text-transform: uppercase;
   text-transform: uppercase;
+  transition: color 0.5s ease;
 }
 
 .portfolio-me a:hover {
@@ -118,7 +121,8 @@ a:hover {
 
 .portfolio-index .thumbnail {
   margin-bottom: 5px;
-  box-shadow: 2px 2px 5px 0 rgba(10, 10, 10, 0.2);
+  box-shadow: 1px 2px 8px 2px rgba(10, 10, 10, 0.2);
+  transition: all .3s ease-in-out;
 }
 
 .portfolio-index a {
@@ -127,6 +131,11 @@ a:hover {
 
 .portfolio-index .cell {
   margin-bottom: 15px;
+}
+
+.portfolio-index .cell:hover .thumbnail {
+  box-shadow: none;
+  opacity: .8;
 }
 
 .portfolio-index .cell h5 {
